--- a/app/views/layouts/delegate_dashboard.html.erb
+++ b/app/views/layouts/delegate_dashboard.html.erb
@@ -54,7 +54,7 @@
 <%= content_tag(:li, link_to("Main", portal_path), class: cp(portal_path)) %>
 
   <%= content_tag(:li, link_to("Host Info", hosts_path), class: cp(hosts_path)) %>
-   <%= content_tag(:li, link_to("Intinerary", itinerary_path), class: cp(itinerary_path)) %>
+   <%= content_tag(:li, link_to("Itinerary", itinerary_path), class: cp(itinerary_path)) %>
 
    <%= content_tag(:li, link_to("Delegates", all_delegates_path), class: cp(all_delegates_path)) %>
     <%= content_tag(:li, link_to("Profile", edit_delegate_registration_path), class: cp(edit_delegate_registration_path)) %>
