--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New feedback</h1>
+<div class="container">
+<h1 class="text-center">Submit Feedback</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', feedbacks_path %>
+</div>
