Added many-to-many relationship with groups, improved views and changed return equals in delegate.rb

--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -17,7 +17,7 @@
  
 
 <div style="box-shadow: 0px 0px 5px #fff;">
-<%= link_to feedbacks_path do |c| %>
+<%= link_to new_feedback_path do |c| %>
 
 Submit Feedback
 <%= fa_icon "arrow-right 2x", class: 'float-right'%>
