--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -63,11 +63,11 @@
     <%= f.label :estimated_overall_contribution %><br />
     <%= f.number_field :estimated_overall_contribution, class: 'form-control', in: 1..10   %>
   </div>
-
+<!--
   <div class="form-group">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off", class: 'form-control'  %>
-  </div>
+  </div> -->
 
 
   <div class="actions">
