--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -11,10 +11,23 @@
     </div>
   <% end %>
 
-  <div class="field">
+ <!-- <div class="field">
     <%= f.label :receiver %><br>
     <%= f.text_area :receiver, class: "form-control", :required => true %>
-  </div>
+  </div> -->
+
+ <div class="field">
+    <%= f.label :receiver %><br>
+    <%= select("feedback", "receiver", Delegate.all.collect {|d|
+
+      if d.email != current_delegate.email
+
+     [ d.email]
+     end }, {include_blank: 'None'}, class: "form-control")
+
+    %>
+  </div> 
+
  
   <div class="field">
     <%= f.label :good_comments %><br>
