--- a/app/views/delegate_actions/portal.html.erb
+++ b/app/views/delegate_actions/portal.html.erb
@@ -128,7 +128,7 @@
 <%= link_to case_winners_path do %>
 <div class="col-md-2">
 
-<%= image_tag("http://placehold.it/300x300", :class => 'img-responsive') %>
+<%= image_tag("trophy.png", :class => 'img-responsive') %>
 <h4> Case Winners </h4>
 </div>
 <% end %>
