--- a/app/views/layouts/delegate_dashboard.html.erb
+++ b/app/views/layouts/delegate_dashboard.html.erb
@@ -51,7 +51,7 @@
         
     <center><ul class="nav nav-pills delegate-nav" style="margin-left:120px;">
 
-<%= content_tag(:li, link_to("Main", portal_path), class: cp(portal_path)) %>
+<%= content_tag(:li, link_to("Main", root_path), class: cp(root_path)) %>
 
   <%= content_tag(:li, link_to("Host Info", hosts_path), class: cp(hosts_path)) %>
    <%= content_tag(:li, link_to("Itinerary", itinerary_path), class: cp(itinerary_path)) %>
