--- a/app/assets/stylesheets/execs.css.scss
+++ b/app/assets/stylesheets/execs.css.scss
@@ -4,21 +4,25 @@ $brand_yellow_hex_light: rgba(255, 173, 0, 0.75);
 /* Filter Options */
 ul#filterOptions {
   width: 450px;
-  height: 52px;
-  margin: 0 0;
+  height: 100px;
   overflow: hidden;
   text-align: center;
 }
 ul#filterOptions li { 
-	height: 52px;
+	height: 70px;
 	margin-right: 2px;
+  margin-top:30px;
+    padding-top:0px;
+  padding-bottom: 0px;
 	float: left;
 	list-style-type: none;
 	 }
 ul#filterOptions li a {
-  height: 50px;
-  padding: 0 0;
+  height: 70px;
+  padding: 5px 5px;
   border: 1px solid $brand_yellow;
+
+  margin:0px;
   font-weight: bold;
   line-height: 50px;
   text-decoration: none;
