--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -3,10 +3,9 @@
 <div class="container">
 
 <div class="col-lg-12">
+
 <div class="col-md-2">
-<%= link_to cases_path do |c| %>
-<%= fa_icon "arrow-left 2x"%>
-<% end %>
+
 </div>
 
 <div class="col-md-8">
@@ -18,9 +17,8 @@
 
 <div style="box-shadow: 0px 0px 5px #fff;">
 <%= link_to new_feedback_path do |c| %>
-
-Submit Feedback
-<%= fa_icon "arrow-right 2x", class: 'float-right'%>
+<p style="display:inline;">Submit Feedback</p>
+<%= fa_icon "arrow-right 2x", class: 'float-right', :style => 'margin-top:30px'%>
 <% end %>
 </div>
 
