--- a/app/views/cases/winners.html.erb
+++ b/app/views/cases/winners.html.erb
@@ -1,1 +1,57 @@
-<h2>Case Winners</h2>
+<div class="container">
+<div class="col-md-2">
+<%= link_to root_path do |c| %>
+<%= fa_icon "arrow-left 2x", :style => 'margin-top:30px'%>
+<p style="display:inline;">Portal</p>
+<% end %>
+</div>
+<div class="col-md-10">
+<h1 class="text-center">Case Winners</h1>
+</div>
+<% @num_finished_cases = Case.where(:case_sponsor => true).where(:done => true).count %>
+
+<% if @num_finished_cases == 1 %>
+<h2>Case One</h2>
+
+<% case_one_winners = Delegate.order(:case_one_score).limit(4) %>
+
+<% case_one_winners.each do |w| %>
+
+<h3><%= w.fullname %></h3>
+
+<% end %>
+
+<% elsif @num_finished_cases == 2 %>
+<h2>Case Two</h2>
+
+<% case_one_winners = Delegate.order(:case_two_score).limit(4) %>
+
+<% case_one_winners.each do |w| %>
+
+<h3><%= w.fullname %></h3>
+
+<% end %>
+
+<% elsif @num_finished_cases == 3 %>
+<h2>Case Three</h2>
+
+<% case_one_winners = Delegate.order(:case_three_score).limit(4) %>
+
+<% case_one_winners.each do |w| %>
+
+<h3><%= w.fullname %></h3>
+
+<% end %>
+
+<% elsif @num_finished_cases == 4 %>
+<h2>Case Four</h2>
+
+<% case_one_winners = Delegate.order(:case_four_score).limit(4) %>
+
+<% case_one_winners.each do |w| %>
+
+<h3><%= w.fullname %></h3>
+
+<% end %>
+<% end %>
+</div>
