--- a/app/views/feedbacks/_exec_form.html.erb
+++ b/app/views/feedbacks/_exec_form.html.erb
@@ -13,7 +13,10 @@
 
   <div class="field">
     <%= f.label :receiver %><br>
-    <%= f.text_area :receiver, class: "form-control", :required => true %>
+    <%= select("feedback", "receiver", Delegate.all.collect {|d|
+     [ d.fullname] }, {include_blank: 'None'}, class: "form-control", :required => true)
+
+    %>
   </div>
  
   <div class="field">
