--- a/app/views/info/home.html.erb
+++ b/app/views/info/home.html.erb
@@ -34,8 +34,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>What is UW Apprentice?</h2>
-                    <p class="lead">UW Apprentice is a weekend long case competition where students solve real problems for real startups. On March 13-15, four exciting startups from the Waterloo community will present a problem to our cohort of 20 delegates and receive creative solutions to create growth, value and tangible impact. The startups and their cases provide a diverse picture of the startup world. This weekend is your chance to show yourself and the world that you have the grit, intelligence, eloquence, and tools to become Waterloo’s next great entrepreneur.</p>
+                    <h2>What is Apprentice?</h2>
+                    <p class="lead"> Apprentice is a weekend long case competition where students solve real problems for real startups. On March 13-15, four exciting startups from the Waterloo community will present a problem to our cohort of 20 delegates and receive creative solutions to create growth, value and tangible impact. The startups and their cases provide a diverse picture of the startup world. This weekend is your chance to show yourself and the world that you have the grit, intelligence, eloquence, and tools to become Waterloo’s next great entrepreneur.</p>
                 </div>
             </div>
             <!-- /.row -->
