--- a/app/views/info/home.html.erb
+++ b/app/views/info/home.html.erb
@@ -13,15 +13,15 @@
 
             <ul class="list-inline social" style="padding-top:60px;">
                         <li>
-                        <%= link_to "https://www.facebook.com/uwapprentice", method: :put do %>
+                        <%= link_to "https://www.facebook.com/uwapprentice", :target => '_blank' do %>
              			 <%= fa_icon "facebook 2x" %>
               <% end %></li>
 
-              <li><%= link_to "https://twitter.com/UWApprentice", method: :put do %>
+              <li><%= link_to "https://twitter.com/UWApprentice", :target => '_blank'  do %>
               <%= fa_icon "twitter 2x" %>
               <% end %></li>
 
-              <li><%= mail_to "uwaterlooapprentice@gmail.com", method: :put do %>
+              <li><%= mail_to "uwaterlooapprentice@gmail.com" do %>
               <%= fa_icon "envelope 2x" %>
               <% end %></li>
  
