Upgraded highcharts version because I found actual issue with the chart

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,6 +24,12 @@
   </div>
 -->
 
+<div class="form-group">
+    <%= f.label "Program" %><br />
+    <%= f.text_field :delegate_program, class: 'form-control'  %>
+  </div>
+
+
   <div class="form-group">
     <%= f.label :facebook %><i>(start with 'http://' please)</i><br />
     <%= f.text_field :facebook, class: 'form-control'  %>
