--- a/app/views/layouts/delegate_dashboard.html.erb
+++ b/app/views/layouts/delegate_dashboard.html.erb
@@ -42,12 +42,12 @@
       </div>
     </nav>
 
-
+<div class="container">
 <div class="pill-wrapper" style="display:inline-block" >
 
 </div>
         
-    <center><ul class="nav nav-pills delegate-nav" style="margin-left:120px;">
+    <center><ul class="nav nav-pills delegate-nav">
 
 <%= content_tag(:li, link_to("Main", root_path), class: cp(root_path)) %>
 
@@ -119,12 +119,10 @@
  
     <!--<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">    -->
 
-    <div class="col-md-12" style="padding-top:70px;">
+    <div class="col-md-12">
       <%= yield %>
     </div>
   </div>
-</div>
-
 
 </body>
 </html>
