--- a/app/views/layouts/delegate_dashboard.html.erb
+++ b/app/views/layouts/delegate_dashboard.html.erb
@@ -31,7 +31,7 @@
             <li><%= link_to "Blog", stay_tuned_path %></li>
             <% if delegate_signed_in? %>
             <li><%= link_to "Logout", destroy_delegate_session_path, :method => :delete %></li>
-
+hero
             <% else %>
             <li><%= link_to "Login", new_delegate_session_path %></li>
 
