--- a/app/views/feedbacks/exec_case_eval.html.erb
+++ b/app/views/feedbacks/exec_case_eval.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
-<h1 class="text-center">Submit Exec Case Feedback</h1>
+<h1 class="text-center">Delegate Case Feedback</h1>
 
 <%= render 'exec_case_eval_form' %>
 
-<%= link_to 'Back', feedbacks_path %>
 </div>
