--- a/app/views/feedbacks/exec_feedback.html.erb
+++ b/app/views/feedbacks/exec_feedback.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
-<h1 class="text-center">Submit Exec Feedback</h1>
+<h1 class="text-center">Delegate Attribute Feedback</h1>
 
 <%= render 'exec_form' %>
 
-<%= link_to 'Back', feedbacks_path %>
 </div>
