Added better exec logic

--- a/app/views/feedbacks/_exec_form.html.erb
+++ b/app/views/feedbacks/_exec_form.html.erb
@@ -52,7 +52,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :exec_secret %><i> &nbsp;Please ensure you enter the correct Key for each of the forms. They are different!!!!</i><br>
+    <%= f.label :exec_secret %><br>
     <%= f.number_field :exec_secret, class: "form-control", :required => true  %>
   </div>
 
