--- a/app/views/feedbacks/_exec_case_eval_form.html.erb
+++ b/app/views/feedbacks/_exec_case_eval_form.html.erb
@@ -22,8 +22,19 @@
  <!--
  <div class="field">
     <%= f.label "Case Number" %><br>
-    <%= f.number_field :leadership, class: "form-control", in: 1...5, :required => true  %>
+    <%= f.number_field :leadership, class: "form-control masked_input_field", in: 1...5, :required => true  %>
   </div>-->
+
+    <div class="field">
+    <%= f.label :good_comments %><br>
+    <%= f.text_field :good_comments, class: "form-control" %>
+  </div>
+  <div class="field">
+    <%= f.label :improvement_comments %><br>
+    <%= f.text_field :improvement_comments, class: "form-control"%>
+  </div>
+
+
   <div class="field">
     <%= f.label :impact %><br>
     <%= f.number_field :case_impact, class: "form-control", in: 1...11, :required => true  %>
