--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>UW Apprentice | Innovate, Impact, Experience</title>
+  <title>Apprentice | Innovate, Impact, Experience</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= favicon_link_tag 'logo.png' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
