--- a/app/views/delegate_actions/portal.html.erb
+++ b/app/views/delegate_actions/portal.html.erb
@@ -27,7 +27,7 @@
                                         <%= fa_icon "bar-chart 5x" %>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge"><%= current_delegate.total_score %></div>
+                                        <div class="huge"><%= current_delegate.total_score.round(2) %></div>
                                         <div>Total Score</div>
                                     </div>
                                 </div>
