--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -17,7 +17,7 @@
 
 <div style="box-shadow: 0px 0px 5px #fff;">
 <%= link_to new_feedback_path do |c| %>
-<p style="display:inline;">Submit Feedback</p>
+<p style="display:inline;">Submit Peer Evaluations</p>
 <%= fa_icon "arrow-right 2x", class: 'float-right', :style => 'margin-top:30px'%>
 <% end %>
 </div>
