--- a/app/views/info/_faqs.html.erb
+++ b/app/views/info/_faqs.html.erb
@@ -31,7 +31,7 @@
 
             <div class="answer">
 
-              <h5 class="description-text">All delegates need to pay a $20 fee and a $30 deposit that will be refunded when you successfully complete the competition. 
+              <h5 class="description-text">All delegates need to pay a $25 fee and a $25 deposit that will be refunded when you successfully complete the competition. 
               </h5>
             </div></li>
 
@@ -113,7 +113,7 @@
 
                 <div class="answer">
 
-                  <h5 class="description-text">Feel free to contact us at uwaterlooapprentice@gmail.com, or give us a shout via Twitter or Facebook. 
+                  <h5 class="description-text">Feel free to contact us at <%= mail_to "uwaterlooapprentice@gmail.com" %>, or give us a shout via <%= link_to "Facebook", "https://www.facebook.com/uwapprentice", :target => '_blank' %> or <%= link_to "Twitter", "https://twitter.com/UWApprentice", :target => '_blank' %>. 
                   </h5>
                 </div></li>
               </ul>
