--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -27,6 +27,7 @@
     <%= f.label :receiver %><br>
     <%= f.text_area :receiver, class: "form-control", :required => true %>
   </div> -->
+<h6>Please make sure you look over this <%= link_to "rubric", "https://www.dropbox.com/s/71nj8rf8dkel5qf/rubric.pdf?dl=1", :target => '_blank'%> before submitting feedback</h6>
 
  <div class="field">
     <%= f.label :receiver %><br>
