--- a/app/views/layouts/delegate_dashboard.html.erb
+++ b/app/views/layouts/delegate_dashboard.html.erb
@@ -21,15 +21,17 @@
             <span class="icon-bar"></span>
           </button>
 
-          <%= link_to root_path do |l| %>
+        <!--  <%= link_to root_path do |l| %>
           <%= image_tag("logo-home.png", class: 'navbar-brand', :style => 'width:40px') %>
 
-          <% end %>
+          <% end %>-->
+
+          <%= link_to "UW Apprentice", root_path, class: 'navbar-brand' %>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Team", team_path %></li>
-            <li><%= link_to "Blog", stay_tuned_path %></li>
+           <!-- <li><%= link_to "Team", team_path %></li>
+            <li><%= link_to "Blog", stay_tuned_path %></li> -->
             <% if delegate_signed_in? %>
             <li><%= link_to "Logout", destroy_delegate_session_path, :method => :delete %></li>
             <% else %>
@@ -54,7 +56,9 @@
     <%= content_tag(:li, link_to("Profile", edit_delegate_registration_path), class: cp(edit_delegate_registration_path)) %>
    <%= content_tag(:li, link_to("Delegates", all_delegates_path), class: cp(all_delegates_path)) %>
 
-  <%= content_tag(:li, link_to("Host Info", hosts_path), class: cp(hosts_path)) %>
+ <!-- <%= content_tag(:li, link_to("Host Info", hosts_path), class: cp(hosts_path)) %> -->
+
+  <%= content_tag(:li, link_to("Groups", "https://www.dropbox.com/s/j8q4rw3ez6b2p2y/groups.png?dl=1") )%>
 
    
 </ul></center>
