--- a/app/views/layouts/delegate_dashboard.html.erb
+++ b/app/views/layouts/delegate_dashboard.html.erb
@@ -58,7 +58,7 @@
 
  <!-- <%= content_tag(:li, link_to("Host Info", hosts_path), class: cp(hosts_path)) %> -->
 
-  <%= content_tag(:li, link_to("Groups", "https://www.dropbox.com/s/j8q4rw3ez6b2p2y/groups.png?dl=1") )%>
+  <%= content_tag(:li, link_to("Evaluation Rubric", "https://www.dropbox.com/s/71nj8rf8dkel5qf/rubric.pdf?dl=1") )%>
 
    
 </ul></center>
