--- a/app/views/layouts/exec_evaluation.html.erb
+++ b/app/views/layouts/exec_evaluation.html.erb
@@ -20,11 +20,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-
+<!--
           <%= link_to root_path do |l| %>
           <%= image_tag("logo-home.png", class: 'navbar-brand', :style => 'width:40px') %>
 
-          <% end %>
+          <% end %>-->
+
+          <%= link_to "UW Apprentice", root_path, class: 'navbar-brand' %>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
